--- a/Resources/views/explorer.html.twig
+++ b/Resources/views/explorer.html.twig
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <title>GraphQL explorer</title>
     <style>
         body {
             height: 100%;
@@ -71,14 +72,14 @@
      * various React params to enable interesting integrations.
      */
 
-            // Parse the search string to get url parameters.
+        // Parse the search string to get url parameters.
     var search     = window.location.search;
     var parameters = {};
     search.substr(1).split('&').forEach(function (entry) {
         var eq = entry.indexOf('=');
         if (eq >= 0) {
             parameters[decodeURIComponent(entry.slice(0, eq))] =
-                    decodeURIComponent(entry.slice(eq + 1));
+                decodeURIComponent(entry.slice(eq + 1));
         }
     });
 
@@ -86,7 +87,7 @@
     if (parameters.variables) {
         try {
             parameters.variables =
-                    JSON.stringify(JSON.parse(parameters.variables), null, 2);
+                JSON.stringify(JSON.parse(parameters.variables), null, 2);
         } catch (e) {
             // Do nothing, we want to display the invalid JSON as a string, rather
             // than present an error.
@@ -112,18 +113,18 @@
 
     function updateURL() {
         var newSearch = '?' + Object.keys(parameters).filter(function (key) {
-                    return Boolean(parameters[key]);
-                }).map(function (key) {
-                    return encodeURIComponent(key) + '=' +
-                           encodeURIComponent(parameters[key]);
-                }).join('&');
+            return Boolean(parameters[key]);
+        }).map(function (key) {
+            return encodeURIComponent(key) + '=' +
+                encodeURIComponent(parameters[key]);
+        }).join('&');
         history.replaceState(null, null, newSearch);
     }
 
     function getCookie(name) {
         var value = "; " + document.cookie;
         var parts = value.split("; " + name + "=");
-        if (parts.length == 2) return parts.pop().split(";").shift();
+        if (parts.length === 2) return parts.pop().split(";").shift();
     }
 
     // Defines a GraphQL fetcher using the fetch API.
@@ -133,12 +134,12 @@
             'Content-Type': 'application/json',
         };
         if (window.tokenInput) {
-            headers['{{ tokenHeader }}'] = tokenInput.value;
+            headers['Authorization'] = `Bearer ${tokenInput.value}`;
         }
 
         var cookie = getCookie('XSRF-TOKEN');
 
-        if (cookie != undefined) {
+        if (cookie !== undefined) {
             headers['X-XSRF-TOKEN'] = cookie;
         }
 
@@ -160,16 +161,16 @@
 
     // Render <GraphiQL /> into the body.
     ReactDOM.render(
-            React.createElement(GraphiQL, {
-                fetcher:             graphQLFetcher,
-                query:               parameters.query,
-                variables:           parameters.variables,
-                operationName:       parameters.operationName,
-                onEditQuery:         onEditQuery,
-                onEditVariables:     onEditVariables,
-                onEditOperationName: onEditOperationName
-            }),
-            document.getElementById('graphiql')
+        React.createElement(GraphiQL, {
+            fetcher: graphQLFetcher,
+            query: parameters.query,
+            variables: parameters.variables,
+            operationName: parameters.operationName,
+            onEditQuery: onEditQuery,
+            onEditVariables: onEditVariables,
+            onEditOperationName: onEditOperationName
+        }),
+        document.getElementById('graphiql')
     );
 
 </script>
