fixed explorer.html.twig to not send Authorization token with empty 'Bearer'

--- a/Resources/views/explorer.html.twig
+++ b/Resources/views/explorer.html.twig
@@ -133,7 +133,7 @@
             'Accept':       'application/json',
             'Content-Type': 'application/json',
         };
-        if (window.tokenInput) {
+        if (window.tokenInput.value) {
             headers['Authorization'] = `Bearer ${tokenInput.value}`;
         }
 
